tests/baselines/reference/invalidTryStatements.errors.txt
tests/cases/conformance/statements/tryStatements/invalidTryStatements.ts(8,23): error TS1196: Catch clause variable cannot have a type annotation.
tests/cases/conformance/statements/tryStatements/invalidTryStatements.ts(9,23): error TS1196: Catch clause variable cannot have a type annotation.
tests/cases/conformance/statements/tryStatements/invalidTryStatements.ts(10,23): error TS1196: Catch clause variable cannot have a type annotation.


==== tests/cases/conformance/statements/tryStatements/invalidTryStatements.ts (3 errors) ====
    function fn() {
        try {
        } catch (x) {
            var x: string; // ensure x is 'Any'
        }
    
        // no type annotation allowed
        try { } catch (z: any) { }
                          ~~~
!!! error TS1196: Catch clause variable cannot have a type annotation.
        try { } catch (a: number) { }
                          ~~~~~~
!!! error TS1196: Catch clause variable cannot have a type annotation.
        try { } catch (y: string) { }
                          ~~~~~~
!!! error TS1196: Catch clause variable cannot have a type annotation.
    }
    
    